test/resources/typer/failing/IfError2.grading.amy
object IfError
  if (true) then () else false end if
end IfError
